testsuite/veronac/features/compile-fail/assertion.out/stderr.txt
assertion.verona:10:1: error: Static assertion failed, 'A' is a subtype of 'A'
static_assert(A not subtype A);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
assertion.verona:13:1: error: Static assertion failed, 'A' is not a subtype of 'B'
static_assert(A subtype B);
^~~~~~~~~~~~~~~~~~~~~~~~~~~
assertion.verona:16:1: error: Static assertion failed, 'A' is a subtype of '(A | B)'
static_assert(A not subtype (A | B));
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
assertion.verona:19:1: error: Static assertion failed, 'X' is a subtype of 'X'
static_assert[X](X not subtype X);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
assertion.verona:22:1: error: Static assertion failed, 'Cell[X]' is a subtype of 'Cell[X]'
static_assert[X](Cell[X] not subtype Cell[X]);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
assertion.verona:25:1: error: Static assertion failed, 'Cell[X]' is not a subtype of 'Cell[A]'
static_assert[X](Cell[X] subtype Cell[A]);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
assertion.verona:28:1: error: Static assertion failed, 'X' is not a subtype of 'Y'
static_assert[X, Y](X subtype Y);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
7 errors generated
